--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 
-<style>body{
+<style
+  body{
   font-family: 'Montserrat', sans-serif;
     text-align: center;
 
