--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Puppy Partner</title>
+  <title>TinDog</title>
   <link rel = "icon" href ="https://img.icons8.com/fluency/48/000000/doge.png" type = "image/x-icon">
 
 
 <!-- css -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-<link rel="stylesheet" href="D:\udemy\webdevelopment\Bootstrap\TinDog-Start-master\css\styles.css">
+
 
 <!-- J-query/javascriprt -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -26,8 +26,8 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
-
-<style
+<style>
+  
   body{
   font-family: 'Montserrat', sans-serif;
     text-align: center;
@@ -210,7 +210,11 @@ p{
 font-family: "Montserrat",sans-serif;
   color: #23272B;
 
-}</style>
+}
+
+
+</style>
+ 
 </head>
 
 <body>
@@ -221,7 +225,7 @@ font-family: "Montserrat",sans-serif;
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
 
-      <a class="navbar-brand" href=""><img src="https://img.icons8.com/ios/40/000000/doge.png"/> Puppy Partner</a>
+      <a class="navbar-brand" href=""><img src="https://img.icons8.com/ios/40/000000/doge.png"/> tindog</a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -252,7 +256,7 @@ font-family: "Montserrat",sans-serif;
       <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
     </div>
     <div class="col-lg-6">
-      <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
+      <img class="title-image" src="iphone6.png" alt="iphone-mockup">
     </div>
 </div>
   </div>
@@ -293,12 +297,12 @@ font-family: "Montserrat",sans-serif;
    <div class="carousel-inner">
      <div class="carousel-item active">
        <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-       <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
+       <img class="testimonial-image" src="dog-img.jpg" alt="dog-profile">
        <em>Pebbles, New York</em>
      </div>
      <div class="carousel-item">
        <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-       <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+       <img class="testimonial-image" src="lady-img.jpg" alt="lady-profile">
        <em>Beverly, Illinois</em>
      </div>
    </div>
@@ -318,10 +322,10 @@ font-family: "Montserrat",sans-serif;
   <!-- Press -->
 
   <section id="press">
-    <img class="press-logo"src="images/techcrunch.png" alt="tc-logo">
-    <img class="press-logo"src="images/tnw.png" alt="tnw-logo">
-    <img class="press-logo"src="images/bizinsider.png" alt="biz-insider-logo">
-    <img class="press-logo"src="images/mashable.png" alt="mashable-logo">
+    <img class="press-logo"src="techcrunch.png" alt="tc-logo">
+    <img class="press-logo"src="tnw.png" alt="tnw-logo">
+    <img class="press-logo"src="bizinsider.png" alt="biz-insider-logo">
+    <img class="press-logo"src="mashable.png" alt="mashable-logo">
 
   </section>
 
@@ -401,21 +405,17 @@ font-family: "Montserrat",sans-serif;
 
   <footer id="footer">
     <div class="final-footer">
-   <p>Created By Vinoth Devanesan Using</p>
-
-      <i class="fab fa-html5 products"></i>
-      <i class="fab fa-css3-alt products"></i>
-      <i class="fab fa-bootstrap products"></i>
+   <p>Created By Vinoth Devanesan</p>
    <br>
 
 
-
+      <a href="https://twitter.com/_VinoDevanesan_" <i class="fab fa-twitter tweet"></i></a>
       <a href="https://www.instagram.com/_vino_dev_/?hl=en" <i class="fab fa-instagram tweet"></i></a>
       <a href="https://www.facebook.com/profile.php?id=100008541725227" <i class="fab fa-facebook-f tweet"></i></a>
       <a href="mailto:vinodevanesan@gmail.com" <i class="fas fa-envelope tweet"></i></a>
 
     <p>Its a Responsive Site(Mobile-Friendly Website)</p>
-    <p>© Copyright vinodevanesan</p>
+    <p>© Copyright 2022</p>
 </div>
   </footer>
 </body>
